Fix overflowing search bar on mobile in HealthAtoZ

--- a/src/Web/iCareNow.Web/wwwroot/css/pages/healthAtoZ/healthAtoZ.scss
+++ b/src/Web/iCareNow.Web/wwwroot/css/pages/healthAtoZ/healthAtoZ.scss
@@ -138,9 +138,7 @@
 
             .search-input-field {
                 margin-bottom: 20px;
-
-                .magnifying-glass-icon {
-                }
+                width: 100%;
 
                 .search-text-field-input {
                     width: 100%;
